# juce_metal_convolution

./: .gitignore  CMakeLists.txt  README.md
metal-cmake/: CMakeLists.txt  convengine.h  convengine.mm  convolution.metal  shift_and_insert.metal
metal-cmake/metal-cpp/SingleHeader/: Metal.hpp
terminalapp/: CMakeLists.txt
terminalapp/source/: audiocallback.cpp  audiocallback.h  main.cpp
